--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,286 +1,358 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
 }
-
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    height: 100%;
-    background: url('bg2.jpg') no-repeat center center fixed;
-    background-size: cover;
+	margin-bottom: 10px;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	height: 100%; /* Prevents scrolling when the image scales */
 }
 
+.background-container {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: url('bg6.jpg') no-repeat center center fixed;
+	background-size: cover;
+	animation: animateBg 5s linear infinite;
+	z-index: -1; /* Move the background behind other content */
+}
+
+@keyframes animateBg {
+	100% {
+		filter: hue-rotate(360deg);
+	}
+}
 
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 20px 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 99;
+	top: 0;
+	left: 0;
+	width: 100%;
+	padding: 20px 100px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	z-index: 99;
 }
 
 header h1 {
-    font-weight: bold;
-    position: relative;
+	font-weight: bold;
+	position: relative;
 }
 
 header h1::before {
-    content: "";
-    position: absolute;
-    bottom: -4px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #ff0000; /* Set the color of the flashing line */
-    animation: flash 2s infinite alternate;
+	content: '';
+	position: absolute;
+	bottom: -4px;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	background-color: #ff0000; /* Set the color of the flashing line */
+	animation: flash 2s infinite alternate;
 }
 
 @keyframes flash {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
 }
 
 .logo {
-    font-size: 3em;
-    color:white;
-    user-select: none;
+	font-size: 3em;
+	color: white;
+	user-select: none;
 }
 
-
-
 .navigation a {
-    position: relative;
-    font-size: 1.1em;
-    color: #ffffff;
-    text-decoration: none;
-    font-weight: 500;
-    margin-left: 40px;
+	position: relative;
+	font-size: 1.1em;
+	color: #ffffff;
+	text-decoration: none;
+	font-weight: 500;
+	margin-left: 40px;
 }
 
 .navigation a::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    width: 100%;
-    height: 3px;
-    background: #ffffff;
-    border-radius: 5px;
-    transform-origin: right;
-    transform: scaleX(0);
-    transition: transform .5s;
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: -6px;
+	width: 100%;
+	height: 3px;
+	background: #ffffff;
+	border-radius: 5px;
+	transform-origin: right;
+	transform: scaleX(0);
+	transition: transform 0.5s;
 }
 
 .navigation a:hover::after {
-    transform-origin: left;
-    transform: scaleX(1);
+	transform-origin: left;
+	transform: scaleX(1);
 }
 
 .navigation .bthLogin-popup {
-    width: 130px;
-    height: 50px;
-    background: transparent;
-    border: 2px solid #ffffff;
-    outline: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 1.1em;
-    color: #ffffff;
-    font-weight: 500;
-    margin-left: 40px;
-    transition: .5s;
+	width: 130px;
+	height: 50px;
+	background: transparent;
+	border: 2px solid #ffffff;
+	outline: none;
+	border-radius: 6px;
+	cursor: pointer;
+	font-size: 1.1em;
+	color: #ffffff;
+	font-weight: 500;
+	margin-left: 40px;
+	transition: 0.5s;
 }
 
 .navigation .bthLogin-popup:hover {
-    background: #ffffff;
-    color: #162938;
+	background: #ffffff;
+	color: #162938;
 }
 
 .wrapper {
-    position: relative;
-    width: 400px;
-    height: 440px;
-    background: transparent;
-    border: 2px solid rgba(255, 255, 255, .5);
-    border-radius: 20px;
-    backdrop-filter: blur(20px);
-    box-shadow: 0 0 30px rgba(0, 0, 0, .5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    transform: scale(0);
-    transition: transform .5s ease, height .2s ease;
+	position: relative;
+	width: 400px;
+	height: 440px;
+	background: transparent;
+	border: 2px solid rgba(255, 255, 255, 0.5);
+	border-radius: 20px;
+	backdrop-filter: blur(20px);
+	box-shadow: 0 0 30px rgba(223, 215, 215, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+	transform: scale(0);
+	transition: transform 0.5s ease, height 0.2s ease;
 }
 
 .wrapper.active-popup {
-    transform: scale(1);
+	transform: scale(1);
 }
 
 .wrapper.active {
-    height: 520px;
+	height: 520px;
 }
 
 .wrapper .form-box {
-    width: 100%;
-    padding: 40px;
+	width: 100%;
+	padding: 40px;
 }
 
 .wrapper .form-box.login {
-    transition: transfrom .18s ease;
-    transform: translateX(0);
+	transition: transform 0.18s ease;
+	transform: translateX(0);
 }
 
 .wrapper.active .form-box.login {
-    transition: none;
-    transform: translateX(-400px);
+	transition: none;
+	transform: translateX(-400px);
 }
 
 .wrapper .form-box.register {
-    position: absolute;
-    transition: none;
-    transform: translateX(400px);
+	position: absolute;
+	transition: none;
+	transform: translateX(400px);
 }
 
 .wrapper.active .form-box.register {
-    transition: transfrom .18s ease;
-    transform: translateX(0);
+	transition: transform 0.18s ease;
+	transform: translateX(0);
 }
 
 .wrapper .icon-close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 45px;
-    height: 45px;
-    background:#efefef;
-    font-size: 2em;
-    color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom-left-radius: 20px;
-    cursor: pointer;
-    z-index: 1;
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 45px;
+	height: 45px;
+	background: #efefef;
+	font-size: 2em;
+	color: black;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-bottom-left-radius: 20px;
+	cursor: pointer;
+	z-index: 1;
 }
 
 .form-box h2 {
-    font-size: 2em;
-    color: #ececec;
-    text-align: center;
+	font-size: 2em;
+	color: #ececec;
+	text-align: center;
 }
 
 .input-box {
-    position: relative;
-    width: 100%;
-    height: 50px;
-    border-bottom: 2px solid #cdd3d7;
-    margin: 30px 0;
+	position: relative;
+	width: 100%;
+	height: 50px;
+	border-bottom: 2px solid #cdd3d7;
+	margin: 30px 0;
 }
 
 .input-box label {
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
-    font-size: 1em;
-    color: #d2d6d8;
-    font-weight: 500;
-    pointer-events: none;
-    transition: .5s;
+	position: absolute;
+	top: 50%;
+	left: 5px;
+	transform: translateY(-50%);
+	font-size: 1em;
+	color: #d2d6d8;
+	font-weight: 500;
+	pointer-events: none;
+	transition: 0.5s;
 }
 
 .input-box input:focus ~ label,
 .input-box input:valid ~ label {
-    top: -5px;
+	top: -5px;
 }
 
 .input-box input {
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    font-size: 1em;
-    color: #bfc6cb;
-    font-weight: 600;
-    padding: 0 35px 0 5px;
+	width: 100%;
+	height: 100%;
+	background: transparent;
+	border: none;
+	outline: none;
+	font-size: 1em;
+	color: #bfc6cb;
+	font-weight: 600;
+	padding: 0 35px 0 5px;
 }
 
 .input-box .icon {
-    position: absolute;
-    right: 8px;
-    font-size: 1.2em;
-    color: #b1b7bc;
-    line-height: 57px;
+	position: absolute;
+	right: 8px;
+	font-size: 1.2em;
+	color: #b1b7bc;
+	line-height: 57px;
 }
 
 .remember-forgot {
-    font-size: .9em;
-    color: #caced1;
-    font-weight: 500;
-    margin: -15px 0 15px;
-    display: flex;
-    justify-content: space-between;
+	font-size: 0.9em;
+	color: #caced1;
+	font-weight: 500;
+	margin: -15px 0 15px;
+	display: flex;
+	justify-content: space-between;
 }
 
 .remember-forgot label input {
-    accent-color: #7d8287;
-    margin-right: 3px;
+	accent-color: #7d8287;
+	margin-right: 3px;
 }
 
 .remember-forgot a {
-    color: #f5f7f8;
-    text-decoration: none;
+	color: #f5f7f8;
+	text-decoration: none;
 }
 
 .remember-forgot a:hover {
-    text-decoration: underline;
+	text-decoration: underline;
 }
 
 .bth {
-    width: 100%;
-    height: 45px;
-    background: #154d77;
-    border: none;
-    outline: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 1em;
-    color: #ffffff;
-    font-weight: 500;
+	width: 100%;
+	height: 45px;
+	background: #154d77;
+	border: none;
+	outline: none;
+	border-radius: 6px;
+	cursor: pointer;
+	font-size: 1em;
+	color: #ffffff;
+	font-weight: 500;
 }
 
 .login-register {
-    font-size: .9em;
-    color: #7f8284;
-    text-align: center;
-    font-weight: 500;
-    margin: 25px 0 10px;
+	font-size: 0.9em;
+	color: #7f8284;
+	text-align: center;
+	font-weight: 500;
+	margin: 25px 0 10px;
 }
 
 .login-register p a {
-    color: #1c72b3;
-    text-decoration: none;
-    font-weight: 600;
+	color: #1c72b3;
+	text-decoration: none;
+	font-weight: 600;
 }
 
 .login-register p a:hover {
-    text-decoration: underline;
+	text-decoration: underline;
 }
-    
+
+/* for main  */
+
+.logout-button {
+	display: inline-block;
+	padding: 10px 20px;
+	font-size: 14px;
+	font-weight: bold;
+	text-align: center;
+	text-decoration: none;
+	cursor: pointer;
+	border: 2px solid #4285f4; /* Border color */
+	color: #4285f4; /* Text color */
+	border-radius: 5px; /* Rounded corners */
+	transition: background-color 0.3s, color 0.3s; /* Smooth transition */
+}
+
+.logout-button:hover {
+	background-color: #4285f4; /* Change background color on hover */
+	color: #ffffff; /* Change text color on hover */
+}
+table {
+	border-collapse: collapse;
+	width: 100%;
+	table-layout: fixed;
+}
+
+th,
+td {
+	border: 1px solid #ddd;
+	padding: 8px;
+	text-align: left;
+}
+
+th {
+	background-color: #f2f2f2;
+	position: sticky;
+	top: 0;
+}
+
+.green {
+	color: green;
+}
+
+.red {
+	color: red;
+}
+
+.white-text {
+	color: white;
+}
+
+.table-container {
+	max-height: 700px;
+	overflow-y: auto;
+}
+.box-content h3,
+.box-content p,
+.button-container a {
+	color: #fff;
+}
