--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,10 +12,10 @@
 			<h1 class="logo">IIT Mandi</h1>
 
 			<nav class="navigation">
-				<a href="home.html">Home</a>
+				<a href="#">Home</a>
 				<a href="#">About</a>
 				<a href="#">Services</a>
-				<a href="index.html" class="logout-button">Logout</a>
+				<a href="/login" class="logout-button">Login</a>
 			</nav>
 		</header>
 		<div class="table-container">
