feat:discord webhook

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,10 +12,9 @@
 			<h1 class="logo">IIT Mandi</h1>
 
 			<nav class="navigation">
-				<a href="#">Home</a>
-				<a href="#">About</a>
-				<a href="#">Services</a>
-				<a href="/login" class="logout-button">Login</a>
+				<a href="/services">Home</a>
+				<a href="/ticket">Ticket</a>
+				<a href="/logout" class="logout-button">Logout</a>
 			</nav>
 		</header>
 		<div class="table-container">
