--- a/src/templates/service.html
+++ b/src/templates/service.html
@@ -36,10 +36,9 @@
 			<h1 class="logo">IIT Mandi</h1>
 
 			<nav class="navigation">
-				<a href="home.html">Home</a>
-				<a href="#">About</a>
-				<a href="#">Services</a>
-				<a href="index.html" class="logout-button">Logout</a>
+			<a href="/services">Home</a>
+				<a href="/ticket">Ticket</a>
+				<a href="/logout" class="logout-button">Logout</a>
 			</nav>
 		</header>
 		<div class="table-container" style="display: flex;align-items: center;flex-direction: column;" >
